--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -6,7 +6,7 @@ custom_links:
   - title: Join Our Team
     url: /join-our-team/
   - title: Free Strategy Call
-    url: /strategy/
+    url: /meeting/
   - title: Free Newsletter
     url: /subscribe/
   # - title: Events
@@ -83,9 +83,9 @@ podcast:
 images:
   client_headshot_path: /img/headshot.jpg
   hero_logo_path: /img/logo.png
-  logo_width_number: 40
+  logo_width_number: 30
   hero_text: Long Island Real Estate Video Blog
-  hero_background_hex: '#999'
+  hero_background_hex: '#fff'
   hero_image_path: /img/background.jpg
   post_cover: /img/cover.jpg
 site_colors:
